objects/Application_Permission__c/Application_Permission__c.object-meta.xml
<CustomObject>
    <label>Application Permission</label>
    <nameField>
        <label>User Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>