objects/Application_Permission__c/fields/Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set__c</fullName>
    <label>Permission Set</label>
    <length>40</length>
    <type>Text</type>
</CustomField>