objects/Application_Permission__c/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <label>User Profile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>